セレクトボックスを追加

--- a/components/01_check/index.html
+++ b/components/01_check/index.html
@@ -7,6 +7,15 @@
     <meta name="view-port" content="width=device-width,initial-scale=1.0">
 
     <style>
+        html {
+            box-sizing: border-box;
+        }
+
+        * {
+            box-sizing: inherit;
+            margin: 0;
+        }
+
         .container {
             display: flex;
             justify-content: center;
